--- a/ARPG_Demo/Assets/Scripts/GameRuntime.asmdef
+++ b/ARPG_Demo/Assets/Scripts/GameRuntime.asmdef
@@ -2,7 +2,8 @@
     "name": "GameRuntime",
     "rootNamespace": "",
     "references": [
-        "GUID:7cb2814e6655d904f952bf240b160d11"
+        "GUID:7cb2814e6655d904f952bf240b160d11",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
